css/styles.css
body {
  -webkit-font-smoothing: antialiased;
}

.sponsors {
  margin-left: -10%;
}

.sponsors li {
  list-style-type: none;
  display: inline-block;
  margin: 10px;
}

.sponsors li img {
  transition: .2s;
  -webkit-transition: .2s;
  -moz-transition: .2s;
  width: 300px;
}

.sponsors li img:hover {
  transition: .2s;
  -webkit-transition: .2s;
  -moz-transition: .2s;
  width: 310px;
}

.team {
  margin-left: -2%;
  width: 100%;
}

.team li {
  list-style-type: none;
  display: inline-block;
  margin: 20px;
  font-size: 1.4em;
  text-align: center;
}

.team li a {
  transition: .1s;
  -webkit-transition: .1s;
  -moz-transition: .1s;
  color: #fff;
  display: block;
  padding: 10px 20px;
  border-radius: 25px;
  border: 2px solid #fff;
  background-color: #EB8223;
  /*background: url('/images/button-bg.png');*/
  /*background-attachment: fixed;*/
  font-size: 0.7em;
  box-shadow: none;
}

.team li a:hover {
  transition: .1s;
  -webkit-transition: .1s;
  -moz-transition: .1s;
  background: #EB8223;
  color: #fff;
  text-decoration: none;
  box-shadow: 1px 1px 3px 1px rgba(0,0,0,.1);
}

.team li img {
  transition: .3s;
  -webkit-transition: .3s;
  -moz-transition: .3s;
  border-radius: 100%;
  border: 3px solid #fff;
  box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, .1);
  width:120px;
  display:block;
  margin: 10px auto;
  filter: grayscale(0%);
  -webkit-filter: grayscale(0%);
  -mozfilter: grayscale(0%);
}

.team li img:hover {
  transition: .3s;
  -webkit-transition: .3s;
  -moz-transition: .3s;
  cursor: pointer;
  filter: grayscale(100%);
  -webkit-filter: grayscale(100%);
  -mozfilter: grayscale(100%);
}

.faq p,h3 {
  text-align: left;
}

ul{
  list-style-type: none;
}

div.col-md-8.col-md-offset-2 {
  width: 100% !important;
  margin-left:0 !important;
}

footer ul li a {
  font-size: 2em;
}

.overlay iframe {
  pointer-events: none;
}

@media screen and (max-width: 480px) {
  #map {
    width: 100%;
  }
}

@media screen and (min-width: 770px) {
  #brand-text {
    text-indent: 70px;
    display: inline-block;
  }
}

#travel {
  color: #F4C976;
  margin: auto;
  /*background-color: #963A20;*/
}

#travel h2, h1{
  color: #fff;
}

